Fixed SSL free bug

--- a/DoTS/src/Makefile
+++ b/DoTS/src/Makefile
@@ -4,6 +4,17 @@ SGX_ARCH ?= x64
 SGX_DEBUG ?= 1
 
 
+##    If linking the switchless library give an error, download the "download_prebuilt.sh" script
+## 	  from the linux-sgx Github repo (https://github.com/intel/linux-sgx) and try the following:
+##	  -------------------------------------------------------------------------------------------
+##    Use the script download_prebuilt.sh inside source code package to download prebuilt binaries to prebuilt folder
+##
+##    $ ./download_prebuilt.sh
+##
+##    Copy the mitigation tools from external/toolset to /usr/local/bin and make sure they have execute permission:
+##
+##      $ sudo cp external/toolset/{as,ld,ld.gold,objdump} /usr/local/bin
+##      $ which as ld ld.gold objdump
 
 
 
