Added script so that Unbound can run in bin directory.

--- a/DoTS-experiment/unbound.conf
+++ b/DoTS-experiment/unbound.conf
@@ -4,12 +4,17 @@ server:
      pidfile: "./unbound.pid"
      interface: 127.0.0.1@11111
      interface: ::0@11111
-     tls-service-key: "/home/yoshimichi/research/dns-tls-sgx/simpledns/certs/server-key.pem"
-     tls-service-pem: "/home/yoshimichi/research/dns-tls-sgx/simpledns/certs/server-cert.pem"
+     tls-service-key: "private_key.pem"
+     tls-service-pem: "certificate.pem"
      tls-port: 11111
      incoming-num-tcp: 5
      udp-upstream-without-downstream: yes 
      # qname-minimisation: yes # Enable QNAME minimisation to increase client privacy
      cache-max-ttl: 0
      tcp-idle-timeout: 0
-     access-control: 128.195.4.85/32 allow # need to accept DNS packets from outside
+     access-control: 127.0.0.1/32 allow # need to accept DNS packets from outside
+     use-syslog: no
+     do-not-query-localhost: no
+stub-zone:
+     name: "example.com"
+     stub-addr: 127.0.0.54
