--- a/DoTS-experiment/pdot-stubby-template.yml
+++ b/DoTS-experiment/pdot-stubby-template.yml
@@ -5,7 +5,7 @@ tls_authentication: GETDNS_AUTHENTICATION_REQUIRED
 tls_query_padding_blocksize: 128
 edns_client_subnet_private : 1
 round_robin_upstreams: 1
-idle_timeout: 10000
+idle_timeout:
 listen_addresses:
   - 127.0.0.1@53
   - 0::1@53
